--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Carter+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
+
 @import './assets/styles/scss/mixins/colors';
 @import './assets/styles/scss/mixins/screen';
 @import './assets/styles/scss/mixins/fonts';
