--- a/src/assets/styles/scss/components/Title.scss
+++ b/src/assets/styles/scss/components/Title.scss
@@ -4,6 +4,7 @@
 .title {
     text-align: center;
     padding-top: 20px;
+    padding-bottom: 30px;
 
     h1 {
         font-family: $primary-font;
