--- a/src/assets/styles/scss/pages/Login.scss
+++ b/src/assets/styles/scss/pages/Login.scss
@@ -100,7 +100,7 @@
     color: $blue-color;
     font-size: 0.95rem;
     margin-top: 1rem;
-    text-decoration: underline;
+    text-decoration: none;
     cursor: pointer;
     transition: color 0.3s ease;
 
