--- a/src/assets/styles/scss/pages/crud/Property.scss
+++ b/src/assets/styles/scss/pages/crud/Property.scss
@@ -1,5 +1,5 @@
-@import '../mixins/colors';
-@import '../mixins/screen';
+@import '../../mixins/colors';
+@import '../../mixins/screen';
 
 .property-container {
   display: flex;
