--- a/src/assets/styles/scss/pages/crud/NewProperty.scss
+++ b/src/assets/styles/scss/pages/crud/NewProperty.scss
@@ -9,6 +9,8 @@
   min-height: 100vh;
   background: #f6f8fb;
   padding: 3rem 1rem;
+
+  @include screen-sm { padding: 3rem 0.5rem; }
 }
 
 .newproperty-card {
@@ -16,11 +18,13 @@
   max-width: 1100px;
   background-color: #fff;
   border-radius: 20px;
-  padding: 2rem 3rem;
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
   border: 1px solid #e5e7eb;
   color: #333;
   font-family: $primary-font;
+  padding: 2rem 3rem;
+
+  @include screen-sm { padding: 2rem 1rem; }
 }
 
 .newproperty-title {
@@ -28,6 +32,9 @@
   color: $blue-color;
   font-size: 2.2rem;
   margin-bottom: 2rem;
+
+    @include screen-md { font-size: 1.8rem; }
+
 }
 
 .form-section {
@@ -121,16 +128,5 @@
     &:hover {
       background-color: #d1d5db;
     }
-  }
-}
-
-/* Responsive */
-@media (max-width: 768px) {
-  .newproperty-card {
-    padding: 1.5rem;
-  }
-
-  .newproperty-title {
-    font-size: 1.8rem;
   }
 }
