--- a/src/assets/styles/scss/pages/crud/CrudProperty.scss
+++ b/src/assets/styles/scss/pages/crud/CrudProperty.scss
@@ -2,7 +2,7 @@
 @import '../../mixins/screen';
 @import '../../mixins/fonts';
 
-.newproperty-container {
+.crudproperty-container {
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -13,7 +13,7 @@
   @include screen-sm { padding: 3rem 0.5rem; }
 }
 
-.newproperty-card {
+.crudproperty-card {
   width: 100%;
   max-width: 1100px;
   background-color: #fff;
@@ -27,7 +27,7 @@
   @include screen-sm { padding: 2rem 1rem; }
 }
 
-.newproperty-title {
+.crudproperty-title {
   text-align: center;
   color: $blue-color;
   font-size: 2.2rem;
@@ -101,7 +101,7 @@
   }
 }
 
-.newproperty-btn {
+.crudproperty-btn {
   width: 100%;
   padding: 1rem;
   border-radius: 12px;
