--- a/src/assets/styles/scss/pages/Contact.scss
+++ b/src/assets/styles/scss/pages/Contact.scss
@@ -1,7 +1,7 @@
 @import '../mixins/colors';
 @import '../mixins/screen';
 
-.contact-page {
+.contact-container {
   background-color: #f6f8fb;
   min-height: 100vh;
   padding: 4rem 2rem;
