--- a/src/assets/styles/scss/pages/Home.scss
+++ b/src/assets/styles/scss/pages/Home.scss
@@ -5,7 +5,7 @@
 .home-container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   min-height: 90vh;
   background: #f6f8fb;
   padding: 2rem 2rem;
