--- a/src/modules/user/password/recover/PasswordRecover.scss
+++ b/src/modules/user/password/recover/PasswordRecover.scss
@@ -1,6 +1,6 @@
-@import '../mixins/colors';
-@import '../mixins/screen';
-@import '../mixins/fonts';
+@import '../../../../assets/styles/scss/mixins/colors';
+@import '../../../../assets/styles/scss/mixins/screen';
+@import '../../../../assets/styles/scss/mixins/fonts';
 
 .recover-container {
   display: flex;
