--- a/src/modules/user/password/reset/PasswordReset.scss
+++ b/src/modules/user/password/reset/PasswordReset.scss
@@ -1,5 +1,5 @@
-@import '../mixins/colors';
-@import '../mixins/screen';
+@import '../../../../assets/styles/scss/mixins/colors';
+@import '../../../../assets/styles/scss/mixins/screen';
 
 .reset-container {
   display: flex;
